--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,4 +1,4 @@
 FROM debian:buster-20201012-slim
 # FROM debian:stretch-20200327-slim
 COPY upgrade.sh /tmp/upgrade.sh
-RUN /tmp/upgrade-alpine.sh
+RUN /tmp/upgrade.sh
