--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,20 @@ jobs:
           docker_layer_caching: true
 
       # build and push Docker image
-      - alpine: |
-          TAG=alpine.$CIRCLE_BUILD_NUM
-          docker build -t dmilan/azure-builder:$TAG -f Dockerfile.alpine .
-          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          docker push dmilan/azure-builder:$TAG
-      - debian: |
-          TAG=debian.$CIRCLE_BUILD_NUM
-          docker build -t dmilan/azure-builder:$TAG -f Dockerfile.debian .
-          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          docker push dmilan/azure-builder:$TAG
+      - run:
+          name: alpine
+          command: |
+            TAG=alpine.$CIRCLE_BUILD_NUM
+            docker build -t dmilan/azure-builder:$TAG -f Dockerfile.alpine .
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker push dmilan/azure-builder:$TAG
+      - run:
+          name: debian
+          command: |
+            TAG=debian.$CIRCLE_BUILD_NUM
+            docker build -t dmilan/azure-builder:$TAG -f Dockerfile.debian .
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker push dmilan/azure-builder:$TAG
 workflows:
   version: 2.1
   docker-build-push:
